# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
headers/: ConverterJSON.h  InvertedIndex.h  RelativeIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: test_inverted_index.cpp  test_main.cpp  test_search_server.cpp
